--- a/scss/layout/_sections.scss
+++ b/scss/layout/_sections.scss
@@ -12,8 +12,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-
-  z-index: 1;
+  //z-index: 1;
 
   .container {
     width: 100%;
@@ -31,7 +30,7 @@
 
   .container {
     position: relative;
-    z-index: 1;
+    //z-index: 1;
 
     // Centrer tout le contenu sur mobile
     @media (max-width: 768px) {
